# progconc

./: .gitignore  Cargo.toml  LICENSE  README.md  escaped.txt
src/: graphics.rs  lib.rs  main.rs  statistics.rs
src/domain/: mod.rs  person.rs  terrain.rs
