[package]
name = "progconc"
version = "0.1.0"
authors = ["Antonin Perrot-Audet <antonin.perrotaudet@yahoo.com>"]
[features]
# no features by default
default = []
[dependencies]
rand = "0.3.15"
clap = "2.26.2"
sdl2 = "*"
log = "0.3.8"
env_logger = "0.4.3"
libc = "*"


#sdl2 = { version = "0.30", optional = true }

